[package]
name = "stream-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.175"
console-subscriber = "0.4.1"
tokio = { version = "1.48.0", features = ["full","tracing"] }
actix-web = "4.11"
actix-cors = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bytes = "1.10.1" # Para manejo eficiente de buffers de bytes (zero-copy clones)
socket2 = "0.6.1"
if-addrs = "0.14.0"
env_logger = "0.11.8"
log = "0.4.27"
futures = "0.3" # Para StreamExt
srt-rs = { git = "https://github.com/Nachompiras/srt-rs", branch = "master" }
mpegts_inspector = { git = "https://github.com/Nachompiras/mpegts_inspector", branch = "main" }
thiserror = "2.0.17"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros", "chrono"] }
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["v4"] }
once_cell = "1.19.0"
tokio-util = "0.7.16"
prometheus = "0.14.0"

[build]
rustflags = ["--cfg", "tokio_unstable"]

[build-dependencies]
bindgen = "0.72.1"
